# reverb-alerts

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  watches.yaml
.github/workflows/: check-deals.yml
src/reverb_alerts/: cli.py  config.py  models.py  notify.py  parser.py  scraper.py
